# mtc-validator

./: .gitignore  IMGBB_SETUP.md  PROMPTS_V03_COMPLETOS.md  SECURITY.md  STREAMLIT_CLOUD_SETUP.md  app.py  config.yaml.example  database.py  debug_mistral.py  debug_payload.py  debug_pdf.py  normas.py  ocr_pdf.py  pyproject.toml  report.py  requirements.txt  test_api_simple.py  test_app.py  test_bulletproof.py  test_mistral.py  test_mistral_imgbb.py  validator.py
.streamlit/: config.toml  secrets.toml.example
prompts/: ESTRUCTURA.md  EXCEL_FORMAT.md  FLUJO_DATOS.md  PROMPTS.md  PROMPTS_V03_COMPLETOS.md  PROMPT_BULLETPROOF.md  PROMPT_ESTETICA.md  PROMPT_OCR_V2_DUAL_FORMAT.md  README.md  VALIDATOR_LOGIC.md
